Fix responsiveness on cart, home and profile

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -93,10 +93,10 @@
                 <h6>See our delivery policy</h6>
             </a>
         </div>
-        <div class="col-6 col-md-2 text-center">
+        <div class="col-6 col-md-4 text-center">
             <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
         </div>
-        <div class="col-6 offset-3 col-md-2 text-center">
+        <div class="col-6 offset-3 col-md-4 offset-md-8 text-center">
             <h6><strong>Sub total: £{{ sub_total|floatformat:2 }}</strong></h6>
         </div>
     </div>
