--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="container-fluid h-100 p-0 m-0">
-    <div class="row h-100 hero-image home-nav-padding">
-        <div class="col-4 offset-4 hero-text text-center">
+    <div class="row h-100 hero-image home-nav-padding no-margin">
+        <div class="col hero-text text-center">
             <h1 class="hero-title">Vision Furniture</h1>
             <p class="refresh">Refresh your space</p>
             <a class="btns hero-button" href="{% url 'products' %}">View Our Stock</a>
