--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -30,9 +30,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-8 offset-lg-2 col-md-12">
+        <div class="col-lg-8 offset-lg-2 col-12">
             <h4 class="text-center mb-3">Order History</h4>
-            <div class="table-responsive">
+            <div class="order-history table-responsive">
                 <table class="table table-sm table-borderless">
                     <thead>
                         <tr>
@@ -51,9 +51,15 @@
                                 </a>
                             </td>
                             <td>{{ order.date }}</td>
-                            {% for item in order.lineitems.all %}
-                            <td>{{ item.product.name }} x{{ item.quantity }}</td>
-                            {% endfor %}
+                            <td>
+                                <ul class="list-unstyled">
+                                    {% for item in order.lineitems.all %}
+                                    <li class="small">
+                                        {{ item.product.name }} x{{ item.quantity }}
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
                             <td>£{{ order.grand_total }}</td>
                         </tr>
                         {% endfor %}
