--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4 offset-4 pb-3">
+        <div class="col-md-4 offset-md-4 col-6 offset-3 pb-3">
             <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
         </div>
     </div>
