Add to features on README.md

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid nav-padding">
+<div class="container-fluid min-vh-100 nav-padding">
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="main-heading-padding">Thankyou!</h2>
