--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,10 +4,10 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <div class="container-fluid min-vh-100 w-100 p-0">
-    <div class="row">
+<div class="row">
     <div class="col text-center mt-3">
-        <h2 class="main-heading-padding">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+        <h2 class="main-heading-padding">
+            {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
     </div>
 </div>
 <div class="row">
@@ -16,19 +16,20 @@
     </div>
 </div>
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
-        {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
-        {% endif %}
-    {% endif %}
-    </div>
+{% if token_fail %}
+{% url 'account_reset_password' as passwd_reset_url %}
+<p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please request a <a
+        href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+{% else %}
+{% if form %}
+<form method="POST" action="{{ action_url }}">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <input type="submit" name="action" value="{% trans 'change password' %}" />
+</form>
+{% else %}
+<p>{% trans 'Your password is now changed.' %}</p>
+{% endif %}
+{% endif %}
+
 {% endblock %}
