Add help_centre url, view and help_centre.html and linked to help button in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -205,7 +205,8 @@
                             class="fab fa-twitter-square"></i></a>
                 </div>
                 <div class="col-5 my-auto text-right">
-                    <button class="btns help-btn-style right">Need Help? <i class="fas fa-bullhorn"></i></button>
+                    <a href="{% url 'help_centre' %}" class="btns help-btn-style right">Need Help?<i
+                            class="fas fa-bullhorn"></i></a>
                 </div>
             </div>
         </div>
