--- a/home/templates/home/help_centre.html
+++ b/home/templates/home/help_centre.html
@@ -16,7 +16,13 @@
     <div class="row">
         <div class="col-10 offset-1">
             <div class="row h-100">
-                <h1>Helpppp</h1>
+                {% for help in help_info %}
+                <hr>
+                <p>{{ help.question }}</p>
+                <hr>
+                <p>{{ help.answer }}</p>
+                <hr>
+                {% endfor %}
             </div>
         </div>
     </div>
