--- a/profiles/templates/profiles/favorites.html
+++ b/profiles/templates/profiles/favorites.html
@@ -13,7 +13,7 @@
             <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
         </div>
     </div>
-    <div class="row">
+    <div class="row h-100">
         <div class="col-10 offset-1">
             <div class="row h-100">
                 {% if favorites %}
