Fix all auth page titles

--- a/home/templates/home/help_centre.html
+++ b/home/templates/home/help_centre.html
@@ -35,7 +35,7 @@
                 </div>
                 {% endfor %}
             </div>
-            <hr>
+            <hr class="mt-5">
             <h4 class="text-center mb-3">Delivery Policy</h4>
             <table class="table">
                 <thead>
