--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -6,18 +6,10 @@
 
 {% block inner_content %}
 
-
-    <div class="row">
-        <div class="col text-center mt-3">
-            <h2 class="main-heading-padding">{% trans "Account Inactive" %}</h2>
-        </div>
+    <div class="text-center nav-padding">
+        <h2 class="main-heading-padding">{% trans "Account Inactive" %}</h2>
+        <img class="img-fluid w-50 pb-5" src="{{ MEDIA_URL }}underline.png" alt="">
+        <p class="text-center pt-5">{% trans "This account is inactive." %}</p>
     </div>
-    <div class="row">
-        <div class="col-4 offset-4 pb-5">
-            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
-        </div>
-    </div>
-
-    <p class="text-center">{% trans "This account is inactive." %}</p>
 
 {% endblock %}
