--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,15 +7,9 @@
 
 {% block inner_content %}
 
-    <div class="row">
-        <div class="col text-center mt-3">
-            <h2 class="main-heading-padding">{% trans "Password Reset" %}</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-4 offset-4 pb-5">
-            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
-        </div>
+    <div class="text-center nav-padding">
+        <h2 class="main-heading-padding">{% trans "Password Reset" %}}</h2>
+        <img class="img-fluid w-50 pb-5" src="{{ MEDIA_URL }}underline.png" alt="">
     </div>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
