--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,17 +4,11 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-<div class="row">
-    <div class="col text-center mt-3">
-        <h2 class="main-heading-padding">
-            {% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+
+    <div class="text-center nav-padding">
+        <h2 class="main-heading-padding">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+        <img class="img-fluid w-50 pb-5" src="{{ MEDIA_URL }}underline.png" alt="">
     </div>
-</div>
-<div class="row">
-    <div class="col-4 offset-4 pb-5">
-        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
-    </div>
-</div>
 
 {% if token_fail %}
 {% url 'account_reset_password' as passwd_reset_url %}
