--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -8,15 +8,9 @@
 
 {% block inner_content %}
 
-    <div class="row">
-        <div class="col text-center mt-3">
-            <h2 class="main-heading-padding">{% trans "Confirm E-mail Address" %}}</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-4 offset-4 pb-5">
-            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
-        </div>
+    <div class="text-center nav-padding">
+        <h2 class="main-heading-padding">{% trans "Confirm E-mail Address" %}}</h2>
+        <img class="img-fluid w-50 pb-5" src="{{ MEDIA_URL }}underline.png" alt="">
     </div>
 
     {% if confirmation %}
