--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,16 +7,10 @@
 
 {% block inner_content %}
 
-<div class="row">
-    <div class="col text-center mt-3">
+    <div class="text-center nav-padding">
         <h2 class="main-heading-padding">{% trans "Sign In" %}</h2>
+        <img class="img-fluid w-50 pb-5" src="{{ MEDIA_URL }}underline.png" alt="">
     </div>
-</div>
-<div class="row">
-    <div class="col-4 offset-4 pb-5">
-        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
-    </div>
-</div>
 
 {% get_providers as socialaccount_providers %}
 
