--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,15 +6,9 @@
 
 {% block inner_content %}
 
-    <div class="row">
-        <div class="col text-center mt-3">
-            <h2 class="main-heading-padding">{% trans "Sign Up" %}</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-4 offset-4 pb-5">
-            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
-        </div>
+    <div class="text-center nav-padding">
+        <h2 class="main-heading-padding">{% trans "Sign Up" %}</h2>
+        <img class="img-fluid w-50 pb-5" src="{{ MEDIA_URL }}underline.png" alt="">
     </div>
 
     <p class="text-center">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign
