--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
     <title>Vision Furniture {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body class="home-page">
+<body>
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light navbar-style">
             <div class="container-fluid">
