--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -18,7 +18,18 @@
                     {% endif %}
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 my-auto">
-                    <h3>{{ product.name }}</h3>
+                    
+                {% if request.user.is_authenticated %}
+                <form action="{% url 'add_to_favorites' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" data-item_id="{{ product.id }}">
+                    <h3>{{ product.name }}
+                    <button class="btns" type="submit"><i class="far fa-heart fa-lg"></i></button></h3>
+                </form>
+                {% else %}
+                <h3>{{ product.name }}</h3>
+                {% endif %}
+                    
                     {% if request.user.is_superuser %}
                     <small class="text-center">
                         <a href="{% url 'edit_product' product.id %}">Edit</a> |
@@ -58,29 +69,17 @@
                                     </div>
                                 </div>
                             </div>
+                            <a href="{% url 'products' %}" class="btn rounded-0">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
                             <button type="submit" class="btns">Add to cart <i
                                     class="fas fa-shopping-cart fa-lg"></i></button>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
                     </form>
-
-                    <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Keep Shopping</span>
-                    </a>
-                    {% if request.user.is_authenticated %}
-                    <form class="form text-right" action="{% url 'add_to_favorites' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <input type="hidden" data-item_id="{{ product.id }}">
-                        {% if favorite in favorites %}
-                        <button class="btns" type="submit"><i class="fas fa-heart fa-lg"></i></button>
-                        {% else %}
-                        <button class="btns" type="submit"><i class="far fa-heart fa-lg"></i></button>
-                        {% endif %}
-                    </form>
-                    {% endif %}
                 </div>
             </div>
         </div>
