--- a/templates/base.html
+++ b/templates/base.html
@@ -76,23 +76,23 @@
                             <div class="dropdown-menu w-100 horizontal-dropdown" aria-labelledby="navbarDropdown">
                                 <div class="dropdown-item">
                                     <div class="row">
-                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
-                                                href="{% url 'products' %}?room=bed_room">Bedroom</a>
+                                        <div class="col d-flex justify-content-center">
+                                            <a href="{% url 'products' %}?room=bed_room">Bedroom</a>
                                         </div>
-                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
-                                                href="{% url 'products' %}?room=dining_room">Dining Room</a>
+                                        <div class="col d-flex justify-content-center">
+                                            <a href="{% url 'products' %}?room=dining_room">Dining Room</a>
                                         </div>
-                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
-                                                href="{% url 'products' %}?room=bath_room">Bathroom</a>
+                                        <div class="col d-flex justify-content-center">
+                                            <a href="{% url 'products' %}?room=bath_room">Bathroom</a>
                                         </div>
-                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
-                                                href="{% url 'products' %}?room=living_room">Living Room</a>
+                                        <div class="col d-flex justify-content-center">
+                                            <a href="{% url 'products' %}?room=living_room">Living Room</a>
                                         </div>
-                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
-                                                href="{% url 'products' %}?room=kitchen">Kitchen</a>
+                                        <div class="col d-flex justify-content-center">
+                                            <a href="{% url 'products' %}?room=kitchen">Kitchen</a>
                                         </div>
-                                        <div class="col d-flex justify-content-center"><a class="shadow-none"
-                                                href="{% url 'products' %}?room=office">Office</a>
+                                        <div class="col d-flex justify-content-center">
+                                            <a href="{% url 'products' %}?room=office">Office</a>
                                         </div>
                                     </div>
                                 </div>
@@ -107,7 +107,7 @@
                             <input class="form-control me-2" type="text" name="q" placeholder="What is your Vision?"
                                 aria-label="Search">
                             <div class="input-group-append">
-                                <button class="form-control btn btn-outline-success bg-white" type="submit">
+                                <button class="form-control btn btn-black border-black" type="submit">
                                     <span class="icon"><i class="fas fa-search"></i></span>
                                 </button>
                             </div>
