--- a/templates/includes/searchbar.html
+++ b/templates/includes/searchbar.html
@@ -1,11 +1,11 @@
-<div class="w-100 d-lg-none">
+<div class="w-100 d-lg-none mt-0">
     <!-- Searchbar -->
     <form method="GET" action="{% url 'products' %}" class="d-flex">
-        <div class="input-group w-100">
-            <input class="form-control me-2" type="text" name="q" placeholder="What is your Vision?"
+        <div class="input-group w-100 ">
+            <input class="form-control search-bar" type="text" name="q" placeholder="What is your Vision?"
                 aria-label="Search">
             <div class="input-group-append">
-                <button class="form-control btn btn-black border-black" type="submit">
+                <button class="form-control btn btn-black border-0 rounded-0" type="submit">
                     <span class="icon"><i class="fas fa-search"></i></span>
                 </button>
             </div>
