--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -26,10 +26,10 @@
     </div>
     <div class="row">
         <div class="col-2 offset-4 text-center mt-3">
-            <a href="" class="btns">Register <i class="fas fa-user-plus"></i></a>
+            <a href="{% url 'account_signup' %}" class="btns">Register <i class="fas fa-user-plus"></i></a>
         </div>
         <div class="col-2 text-center mt-3">
-            <a href="" class="btns">Login <i class="fas fa-sign-in-alt"></i></a>
+            <a href="{% url 'account_login' %}" class="btns">Login <i class="fas fa-sign-in-alt"></i></a>
         </div>
     </div>
     <div class="row">
