Added code validation to README.md

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -96,8 +96,8 @@
 <!-- Move to top button -->
 <script type="text/javascript">
     $('.upbtn-link').click(function (e) {
-        window.scrollTo(0, 0)
-    })
+        window.scrollTo(0, 0);
+    });
 </script>
 
 <script type="text/javascript">
@@ -120,6 +120,6 @@
 
             window.location.replace(currentUrl);
         }
-    })
+    });
 </script>
 {% endblock %}
