--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -8,7 +8,7 @@
 {% block inner_content %}
 
     <div class="text-center nav-padding">
-        <h2 class="main-heading-padding">{% trans "Password Reset" %}}</h2>
+        <h2 class="main-heading-padding">{% trans "Password Reset" %}</h2>
         <img class="img-fluid w-50 pb-5" src="{{ MEDIA_URL }}underline.png" alt="">
     </div>
     {% if user.is_authenticated %}
