--- a/home/templates/home/help_centre.html
+++ b/home/templates/home/help_centre.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
         <div class="col-10 offset-1 text-center">
-            <h4 class="text-center mb-3">FAQ</h4>
+            <h4 class="text-center mb-3">FAQs</h4>
             <div class="accordion accordion-flush" id="accordionExample">
                 {% for help in help_info %}
                 <div class="accordion-item">
