Fix respnsiveness on product details, cart and checkout

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -116,8 +116,8 @@
                     <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
 
-                <div class="submit-button text-right mt-5 mb-2">
-                    <a href="{% url 'view_cart' %}" class="btns">
+                <div class="submit-button text-right mt-3 mb-3">
+                    <a href="{% url 'view_cart' %}" class="btns mb-3">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
