--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row pt-3">
                         <div class="col-3 offset-3 text-center">
                             <button class="update-link btns" type="submit">Update</button>
                         </div>
