--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -17,19 +17,18 @@
                     </a>
                     {% endif %}
                 </div>
-                <div class="col-12 col-md-6 col-lg-6 my-auto">
-                    
-                {% if request.user.is_authenticated %}
-                <form action="{% url 'add_to_favorites' product.id %}" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" data-item_id="{{ product.id }}">
-                    <h3>{{ product.name }}
-                    <button class="btns" type="submit"><i class="far fa-heart fa-lg"></i></button></h3>
-                </form>
-                {% else %}
-                <h3>{{ product.name }}</h3>
-                {% endif %}
-                    
+                <div class="col-12 col-md-6 col-lg-6 my-auto pt-3">
+                    {% if request.user.is_authenticated %}
+                    <form action="{% url 'add_to_favorites' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" data-item_id="{{ product.id }}">
+                        <h3 class="pt-3">{{ product.name }}
+                            <button class="btns" type="submit"><i class="far fa-heart fa-lg"></i></button></h3>
+                    </form>
+                    {% else %}
+                    <h3>{{ product.name }}</h3>
+                    {% endif %}
+
                     {% if request.user.is_superuser %}
                     <small class="text-center">
                         <a href="{% url 'edit_product' product.id %}">Edit</a> |
