Edit cart buttons for better responsiveness

--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -68,13 +68,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="{% url 'products' %}" class="btn rounded-0">
+                            <a href="{% url 'products' %}" class="btn pl-0 mt-2">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <button type="submit" class="btns">Add to cart <i
+                            <button type="submit" class="btns ml-2 mt-2">Add to cart <i
                                     class="fas fa-shopping-cart fa-lg"></i></button>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
