--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -50,8 +50,8 @@
         <div class="col-10 offset-1">
             <div class="row">
                 {% for product in products %}
-                <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                    <div class="card product-box">
+                <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mt-2 mb-3">
+                    <div class="card product-box h-100">
                         {% if product.image %}
                         <a href="{% url 'product_details' product.id %}">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
