--- a/templates/includes/searchbar.html
+++ b/templates/includes/searchbar.html
@@ -1,6 +1,6 @@
-<div class="w-100 d-lg-none mt-0">
+<div class="w-100 d-lg-none search-bar">
     <!-- Searchbar -->
-    <form method="GET" action="{% url 'products' %}" class="d-flex search-bar">
+    <form method="GET" action="{% url 'products' %}" class="d-flex">
         <div class="input-group w-100 ">
             <input class="form-control search-bar" type="text" name="q" placeholder="What is your Vision?"
                 aria-label="Search">
